created resume.js and added skills in it

--- a/myportfolio/src/css/layout.css
+++ b/myportfolio/src/css/layout.css
@@ -302,3 +302,8 @@ ul#nav li.current a { color: #F06000; }
    line-height: 42px;
    border-radius: 3px 0 0 3px;
 }
+
+.git {
+   -moz-animation: git 2s ease;
+   -webkit-animation: git 2s ease;
+}
