--- a/myportfolio/src/components/projects.css
+++ b/myportfolio/src/components/projects.css
@@ -1,29 +1,50 @@
 .project-list{
      position: relative;
 }
+.project-list-items{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
 .project-list-single{
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
     float: left;
-    width: 33%;
-    height: 450px;
+    width:50%;
+    min-height: 450px;
     border-radius: 50px;
     background-color: antiquewhite;
     border: 1px solid red;
     transform: scale(0.98);
 
 }
+@media only screen and (max-width: 600px) {
+    .project-list-items{ 
+        flex-direction: column; 
+    }
+    .project-list-single{
+        width: 100%;
+    }
+  }
 .project-list-single-top{
     position: relative;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
 }
-.project-list-single-fig{
+.project-list-single-top-fig{
     width: 40%;
-    padding-right: 15px;
+    /* padding-right: 15px;
+    padding-left: ; */
+    position: relative;
+}
+.project-list-single-fig{
+    width: 100%;
 }
 .project-list-single-data{
     position: relative;
