--- a/myportfolio/src/components/projects.css
+++ b/myportfolio/src/components/projects.css
@@ -125,7 +125,7 @@
         font: 18px/24px 'opensans-bold', sans-serif;
         text-transform: uppercase;
         letter-spacing: 1px;
-        margin-left: 600px;
+        /* margin-left: 600px; */
         font-weight: 400;
         color: #FFF;
      }
