added media queries for projects and resume part

--- a/myportfolio/src/components/footer.css
+++ b/myportfolio/src/components/footer.css
@@ -1,4 +1,4 @@
-..footer-page{
+.footer-page{
     position: relative;
     /* display: flex;
     flex-direction: column;
@@ -13,17 +13,24 @@
     color: #fff;
 }
 /* social links */
- .social-links {
-    margin: 18px 0 30px 480px;
-    padding: 0;
-    font-size: 30px;
+.footer-social{
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+ .footer-social-item {
+     position: relative;
+    height: 40px;
+    width: 40px;
+    zoom: 1.5;
+    font-size: 20px;
+    
  }
- .social-links li {
-     display: inline-block;
-     margin: 0;
-     padding: 0;
-     margin-left: 42px;
-     color: #F06000;
+
+ .footer-social-item i:hover{
+    color: #11ABB0;
  }
  
  .social-links li:first-child { margin-left: 0; }
@@ -31,11 +38,12 @@
  /* Go To Top Button */
 #go-top {
 	position: relative;
-	padding-top: 1400px;
-   left: 50%;
-   margin-left: -80px;
+	display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 #go-top a {
+    text-align: center;
 	text-decoration: none;
 	border: 0 none;
 	display: block;
