--- a/myportfolio/src/components/projects.css
+++ b/myportfolio/src/components/projects.css
@@ -23,6 +23,18 @@
     transform: scale(0.98);
 
 }
+.projects-header {
+    width: 100%;
+    text-align: center;
+    color: #FFF;
+    text-decoration: underline;
+    text-decoration-color: red;
+    text-decoration-thickness: 3px;
+     font-weight: 900;
+     font-size: 30px;
+     /* border-bottom: 3px solid red; */
+     padding-bottom: 6px;
+ }
 @media only screen and (max-width: 600px) {
     .project-list-items{ 
         flex-direction: column; 
