--- a/myportfolio/src/components/resume.css
+++ b/myportfolio/src/components/resume.css
@@ -1,9 +1,39 @@
-.skill-page{
+.skill-page,.education{
     position: relative;
 }
-.skill-header{
-    margin-bottom: 10px;
-}
+ .education-list{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    flex-wrap: wrap;
+ }
+ .education-list-item{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-around; */
+    /* flex-wrap: wrap; */
+ }
+
+ .education-list-item-sub,.education-list-item-name{
+     position: relative;
+     /* padding: 5px; */
+     width: 100%;
+     text-align: center;
+
+ }
+ .education-list-item-name{
+     font-size: 20px;
+     font-weight:500
+ }
+ .education-list-item-info{
+    font: 16px/24px 'librebaskerville-italic', serif;
+    color: #6E7881;
+ }
+ .education-list-item-date{
+    font: 15px/24px 'opensans-regular', sans-serif;
+ }
 .skill{
     position: relative;
     display: flex;
@@ -26,7 +56,7 @@
     display: flex;
     flex-direction: row;
 }
-.skill-techstack-list, .skill-programming-list {
+.skill-techstack-list, .skill-programming-list,.skill-others-list{
     position: relative;
     display: flex;
     flex-direction: row;
@@ -34,10 +64,10 @@
     flex-wrap: wrap;
     
 }
-.skill-others-list{
+/* .skill-others-list{
     position: relative;
     
-}
+} */
 .skill-techstack-list-item{
     position: relative;
     /* display: flex;
@@ -51,17 +81,19 @@
 }
 .skill-programming-list-item{
     position: relative;
-    float: left;
-    width: 33%;
-    height: 150px;
-    padding-left: 150px;
-    padding-right: 100px;
+    /* float: left;
+    width: 33%; */
+    height: 200px;
+    padding: 50px;
+    /* padding-left: 150px;
+    padding-right: 100px; */
 }
 
 .skill-others-list-item{
     position: relative;
-    float: left;
-    padding-left: 150px;
+    /* float: left; */
+    /* padding-left: 150px; */
+    padding: 50px;
 }
 .skill-techstack-fig{
     width: 120px;
@@ -81,16 +113,29 @@
     border-bottom: 3px solid #11ABB0;
     padding-bottom: 6px;
  }
- #skill-header{
+ .skill-page-header,.education-header{
      padding-bottom: 50px;
+     /* text-align: center; */
  }
+ .resume-header {
+   width: 100%;
+   text-align: center;
+   text-decoration: underline;
+   text-decoration-color: red;
+   text-decoration-thickness: 3px;
+    font-weight: 900;
+    font-size: 30px;
+    /* border-bottom: 3px solid red; */
+    padding-bottom: 6px;
+}
 
  @media only screen and (max-width: 600px) {
-    .skill-techstack{
+    .skill-techstack,.skill-programming,.skill-others{
         flex-direction: column;
     }
-    .skill-techstack-list-item{
+    .skill-techstack-list-item,.skill-others-list-item,.skill-programming-list-item{
         /* width: 49%; */
         padding: 15px;
     }
+   
   }
