--- a/myportfolio/src/components/footer.css
+++ b/myportfolio/src/components/footer.css
@@ -29,10 +29,13 @@
     
  }
 
- .footer-social-item i:hover{
+ .footer-social-item,#go-top i:hover{
     color: #11ABB0;
+    
  }
- 
+ #go-top i{
+     zoom: 3;
+ }
  .social-links li:first-child { margin-left: 0; }
 
  /* Go To Top Button */
@@ -42,7 +45,7 @@
     flex-direction: row;
     justify-content: center;
 }
-#go-top a {
+ /* #go-top a {
     text-align: center;
 	text-decoration: none;
 	border: 0 none;
@@ -50,7 +53,6 @@
 	width: 60px;
 	height: 60px;
 	background-color: #525252;
-    /* background-color: #fff; */
 	-webkit-transition: all 0.2s ease-in-out;
    -moz-transition: all 0.2s ease-in-out;
    -o-transition: all 0.2s ease-in-out;
@@ -61,8 +63,8 @@
    font-size: 21px;
    line-height: 60px;
  	border-radius: 100%;
-}
-#go-top a:hover { background-color: #0F9095; }
+}  */
+#go-top,.footer-social-item a:hover { color: #0F9095; }
 /* #go-top i{
     font-style: italic;
     color: #fff;
