--- a/myportfolio/src/css/layout.css
+++ b/myportfolio/src/css/layout.css
@@ -145,7 +145,8 @@ ul#nav li a {
    line-height: 32px;
 	text-decoration: none;
    text-align:left;
-   color: #fff;
+   color:  white;
+   
 
 	-webkit-transition: color .2s ease-in-out;
 	-moz-transition: color .2s ease-in-out;
@@ -156,7 +157,7 @@ ul#nav li a {
 
 ul#nav li a:active { background-color: transparent !important; }
 ul#nav li.current a { color: #F06000; }
-
+/* ul#nav li a:active { color: #F06000; } */
 
 /******************************* About section ********************************/
 
