modified some css

--- a/myportfolio/src/components/about.css
+++ b/myportfolio/src/components/about.css
@@ -103,6 +103,9 @@
        .about-person-contact-resume{
            flex-direction: column;
        }
+       #about .profile-pic{
+           border-radius: 0%;
+       }
        #about .about-person-contact-resume-contact-details{
            width: 100%;
             align-items: center;
