--- a/myportfolio/src/components/projects.css
+++ b/myportfolio/src/components/projects.css
@@ -35,14 +35,7 @@
      /* border-bottom: 3px solid red; */
      padding-bottom: 6px;
  }
-@media only screen and (max-width: 600px) {
-    .project-list-items{ 
-        flex-direction: column; 
-    }
-    .project-list-single{
-        width: 100%;
-    }
-  }
+
 .project-list-single-top{
     position: relative;
     display: flex;
@@ -149,3 +142,18 @@
          padding-top: 20px;
          padding-bottom: 50px;
      }
+     @media only screen and (max-width: 600px) {
+        .project-list-items{ 
+            flex-direction: column; 
+        }
+        .project-list-single{
+            width: 100%;
+        }
+        .project-title{
+            text-transform: uppercase;
+            font-size: 25px;
+        }
+       .project-list-single-data-short-description h3{
+           font-size: 20px;
+       }
+      }
