--- a/myportfolio/src/css/layout.css
+++ b/myportfolio/src/css/layout.css
@@ -27,9 +27,9 @@ header:before {
 header .banner {
    display: inline-block;
    vertical-align: middle;
-   /* margin: 0 auto; */
+   margin: 0 auto;
    width: 85%;
-   /* padding-bottom: 30px; */
+   padding-bottom: 30px;
    text-align: center;
 }
 
@@ -61,15 +61,15 @@ header .banner-text hr {
 
 /* header social links */
 header .social {
-   /* margin: 24px 0; */
+   margin: 24px 0;
    padding: 0;
    font-size: 30px;
    text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
 }
 header .social li {
    display: inline-block;
-   /* margin: 0 15px; */
-   /* padding: 0; */
+   margin: 0 15px; 
+    padding: 0;
 }
 header .social li a { color: #fff; }
 header .social li a:hover { color: #11ABB0; }
@@ -77,15 +77,15 @@ header .social li a:hover { color: #11ABB0; }
 /* scrolldown link */
 header .scrolldown a {
    position: relative;
-   /* bottom: 200px;
-   left: 50%; */
-   /* margin-left: -29px; */
+   bottom: 200px;
+   left: 50%;
+   margin-left: -29px;
    color: #fff;
    display: block;
    height: 42px;
    width: 42px;
    font-size: 42px;
-   /* line-height: 42px; */
+   line-height: 42px;
    color: #fff;
    border-radius: 100%;
 
